--- a/src/assets/scss/sections.scss
+++ b/src/assets/scss/sections.scss
@@ -5,3 +5,17 @@
         }
     }
 }
+
+.has-gradient {
+    position: relative;
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+    }
+    &.has-gradient-left-to-right .overlay {
+        background: transparent linear-gradient(90deg, $primary 0%, rgba($primary,0) 100%);
+    }
+}
