--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,2 +1,16 @@
+$black: #080808;
+
 $white: #ffffff;
-$light: #f2f2f2;
+$light: #F5F5F5;
+$lighter: #F7F7F7;
+
+$primary: #003182;
+$primary-light: #1952B2;
+$primary-lighter: #ABCBFF;
+
+$secondary: #6FC0C6;
+$secondary-1: #B4DBDE;
+$secondary-2: #CBE7E8;
+$secondary-3: #DFF0F2;
+
+$link: $primary;
