--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,7 @@
 @import "./resources";
 
-@import url('https://fonts.googleapis.com/css?family=Jost:300,400,500,700,900&display=swap');
-$font-primary: 'Roboto', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,600,700&display=swap');
+$font-primary: 'Poppins', sans-serif;
 
 body {
   text-rendering: optimizeLegibility;
