--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -4,6 +4,8 @@ $white: #ffffff;
 $light: #F5F5F5;
 $lighter: #F7F7F7;
 
+$grey: #AAAAAA;
+
 $primary: #003182;
 $primary-light: #1952B2;
 $primary-lighter: #ABCBFF;
