--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -9,6 +9,7 @@ $grey: #AAAAAA;
 $primary: #003182;
 $primary-light: #1952B2;
 $primary-lighter: #ABCBFF;
+$primary-dark: #1952B24D;
 
 $secondary: #6FC0C6;
 $secondary-1: #B4DBDE;
