--- a/src/assets/scss/elements.scss
+++ b/src/assets/scss/elements.scss
@@ -1,11 +1,14 @@
 .button {
   margin-top: 1.5rem;
   border-radius: 290486px;
-  padding-left: calc(1em + .25em);
-  padding-right: calc(1em + .25em);
+  padding-left: calc(1em + 1em);
+  padding-right: calc(1em + 1em);
+  padding-top: 1.75em;
+  padding-bottom: 1.75em;
   font-weight: 700;
   text-transform: uppercase;
   font-size: .9rem;
+  
   &.is-secondary {
     background-color: $secondary;
     color: $white;
@@ -14,6 +17,10 @@
       background-color: transparent;
       border-color: $secondary;
       color: $secondary;
+      &:hover {
+        background-color: $secondary;
+        color: $white;
+      }
     }
   }
 }
