--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -6,6 +6,7 @@
             color: $primary;
             z-index: 1;
             padding-bottom: 2.5rem;
+            font-size: 2.25rem;
         &:after {
             content: '';
             width: 2rem;
@@ -16,12 +17,13 @@
         }}
         span {
             position: absolute;
-            top: -1rem;
-            margin-left: 1rem;
-            font-size: 4rem;
+            top: -2rem;
+            margin-left: 1.25rem;
+            font-size: 6.5rem;
             color: $lighter;
             font-weight: 700;
             z-index: 0;
+            white-space: nowrap;
         }
     }
 }
@@ -73,6 +75,9 @@
         &.hours {
             background-image: url('/svg/hours.svg');
         }
+        &.hours3 {
+            background-image: url('/svg/hours3.svg');
+        }
         &.pin {
             background-image: url('/svg/pin.svg');
         }
@@ -87,6 +92,9 @@
         }
         &.whatsapp {
             background-image: url('/svg/whatsapp.svg');
+        }
+        &.calendar {
+            background-image: url('/svg/calendar.svg');
         }
     }
 }
