--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -28,30 +28,47 @@
     }
 }
 
-.content ul {
-    margin-left: 0;
-    line-height: 2;
-    li {
-        list-style-type: none;
-        padding-left: 2rem;
-        position: relative;
-        &:before {
-            content: '';
-            display: inline-block;
-            position: absolute;
-            left: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: $primary;
-            width: 16px;
-            height: 16px;
-            border-radius: 100%;
-            border: 4px solid white;
-            box-shadow: 0 0 0 2px $primary;
+.content {
+    h1, h2, h3, h4, h5, h6 {
+        color: $primary;
+    }
+    ul {
+        margin-left: 0;
+        line-height: 2;
+        li {
+            list-style-type: none;
+            padding-left: 2rem;
+            position: relative;
+            &:before {
+                content: '';
+                display: inline-block;
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+                background-color: $primary;
+                width: 16px;
+                height: 16px;
+                border-radius: 100%;
+                border: 4px solid white;
+                box-shadow: 0 0 0 2px $primary;
+            }
         }
     }
 }
 
+a {
+    &.arrow {
+        font-weight: 600;
+        &:after {
+            content: '⟶';
+            margin-left: .5rem;
+        }
+    }
+    &:hover {
+    background: none;
+    }  
+}
 .jicon {
     i {
         background-size: contain;
@@ -60,6 +77,10 @@
         display: inline-block;
         width: 1.25rem;
         height: 1.25rem;
+        &.2x {
+            width: 5rem!important;
+            height: 5rem!important;
+        }
         &.email {
             background-image: url('/svg/email.svg');
         }
