--- a/src/assets/scss/elements.scss
+++ b/src/assets/scss/elements.scss
@@ -55,8 +55,22 @@ figure.image-cover {
   }
 }
 
-.swiper-container {
-  width: 100%;
+.swiper {
+  &-container {
+    width: 100%;
+    padding-bottom: 4rem;
+  }
+  &-pagination {
+    &-bullet {
+      width: 12px;
+      height: 12px;
+      margin: 0 5px!important;
+      &-active {
+        transform: scale(1.25);
+        background-color: $primary;
+      }
+    }
+  }
 }
 
 .m {
