--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,10 +8,20 @@ body {
   font-family: $font-primary;
   color: $black;
 }
-p {
-  color: $black;
-}
 
 * {
   box-sizing: border-box;
+}
+
+.page-enter-active {
+  transition: opacity 0.4s ease-out;
+}
+
+.page-leave-active {
+  transition: opacity 0.4s ease-in;
+}
+
+.page-enter,
+.page-leave-active {
+  opacity: 0.25;
 }
