--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -13,6 +13,8 @@ body {
   box-sizing: border-box;
 }
 
+
+// Transitions
 .page-enter-active {
   transition: opacity 0.4s ease-out;
 }
@@ -24,4 +26,26 @@ body {
 .page-enter,
 .page-leave-active {
   opacity: 0.25;
+}
+
+.slide-left-enter-active,
+.slide-left-leave-active,
+.slide-right-enter-active,
+.slide-right-leave-active {
+  transition-duration: 0.5s;
+  transition-property: height, opacity, transform;
+  transition-timing-function: cubic-bezier(0.55, 0, 0.1, 1);
+  overflow: hidden;
+}
+
+.slide-left-enter,
+.slide-right-leave-active {
+  opacity: 0;
+  transform: translate(2em, 0);
+}
+
+.slide-left-leave-active,
+.slide-right-enter {
+  opacity: 0;
+  transform: translate(-2em, 0);
 }
