--- a/src/assets/scss/sections.scss
+++ b/src/assets/scss/sections.scss
@@ -1,3 +1,6 @@
+.section {
+    position: relative;
+}
 // Hero
 .hero {
     position: relative;
@@ -6,12 +9,12 @@
     background-repeat: no-repeat;
   
     &.is-dark {
-        h1, h2, h3, h4, h5, h6 {
+        h1, h2, h3, h4, h5, h6,  p, strong {
             color: $white;
         }
-        p {
-          color: $primary-lighter;
-        }
+        // p, strong {
+        //   color: $primary-lighter;
+        // }
     }
 
     .title--special h2:after {
@@ -46,7 +49,9 @@
         }
     }
     &-secondary {
-        color: $primary;
+        * {
+            color: $primary!important;
+        }
         &-1 { 
             background-color: $secondary-1;
         }
@@ -68,5 +73,15 @@
     }
     &.has-gradient-bottom-to-top:before {
         background: transparent linear-gradient(0, $primary 0%, rgba($primary,0) 100%);
+    }
+}
+
+.is-overlapped {
+    @media screen and (min-width: 769px) {
+        position: relative;
+        z-index: 1;
+        margin-top: -4rem;
+        background-color: $white;
+        box-shadow: 0px 10px 50px $primary-dark;
     }
 }
