section spaced and blog post by month

--- a/src/assets/scss/sections.scss
+++ b/src/assets/scss/sections.scss
@@ -1,5 +1,9 @@
 .section {
     position: relative;
+    margin: 1.5rem auto;
+    @media screen and (min-width: 769px) {
+        margin: 3rem auto;
+    }
 }
 // Hero
 .hero {
