post by year and month

--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -104,7 +104,7 @@ a {
     &--special {
         position: relative;
         max-widht: 100%;
-        overflow: hidden;
+        // overflow: hidden;
         h2 {
             position:relative;
             color: $primary;
