--- a/src/assets/scss/sections.scss
+++ b/src/assets/scss/sections.scss
@@ -3,6 +3,7 @@ $gap-size: 1.5rem;
 .section {
     position: relative;
     margin: $gap-size auto;
+    overflow: hidden;
     @media screen and (min-width: 769px) {
         margin: calc(#{$gap-size} * 2) auto;
     }
@@ -83,12 +84,25 @@ $gap-size: 1.5rem;
 }
 
 .is-overlapped {
+    position: relative;
+    z-index: 1;
     margin-top: calc(#{$gap-size} * -1);
     @media screen and (min-width: 769px) {
-        position: relative;
-        z-index: 1;
         margin-top: calc(#{$gap-size} * -2.5);
         background-color: $white;
         box-shadow: 0px 10px 50px $primary-dark;
     }
+    &-2 {
+        position: relative;
+        z-index: 1;
+        margin-top: calc(#{$gap-size} * -1);
+        margin-bottom: calc(#{$gap-size} * -1);
+        @media screen and (min-width: 769px) {
+            margin-top: calc(#{$gap-size} * -2.5);
+            margin-bottom: calc(#{$gap-size} * -2.5);
+            background-color: $white;
+            box-shadow: 0px 10px 50px $primary-dark;
+        }
+    }
 }
+
