--- a/src/assets/scss/elements.scss
+++ b/src/assets/scss/elements.scss
@@ -39,29 +39,37 @@ margin-bottom: 1rem;
 }
 
 // Images
-figure.image-cover {
-  position: relative;
-  height: 100%;
-  margin: 0;
-  &--full {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-  picture {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
+figure {
+  &.image {
     img {
-      object-fit: cover;
-      object-position: 50% 50%;
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+  &.image-cover {
+    position: relative;
+    height: 100%;
+    margin: 0;
+    &--full {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+    }
+    picture {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+      img {
+        object-fit: cover;
+        object-position: 50% 50%;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
