footer-top bigger icons

--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -56,9 +56,9 @@ a {
         display: inline-block;
         width: 1.25rem;
         height: 1.25rem;
-        &.2x {
-            width: 5rem!important;
-            height: 5rem!important;
+        &.is-medium{
+            padding: 1rem;
+            margin-right: 1rem;
         }
         &.email {
             background-image: url('/svg/email.svg');
