--- a/src/assets/scss/single-sections.scss
+++ b/src/assets/scss/single-sections.scss
@@ -13,12 +13,12 @@
     padding: 0;
     margin-top: 0;
     .columns {
-        figure {
-            @media screen and (max-width: 768px) {
-                padding-bottom: 100%;
+        .column-image {
+            @media screen and (min-width: 769px) {
+                max-width: calc(100% / 12 * 5);
             }
         }
-        .column.is-auto {
+        .column.column-content {
             & > div {
                 max-width: 700px;
             }
@@ -33,6 +33,16 @@
     }
 }
 
+#fidelitycard {
+    .column-image {
+        padding: 0;
+        margin-left: -1.25rem;
+    }
+    .column-content {
+        padding-bottom: 2rem;
+    }
+}
+
 #calltoaction {
     margin-bottom: -4rem;
     z-index: 2;
@@ -40,4 +50,48 @@
 #testimonial-section {
     padding-top: 8rem!important;
     margin-top: 0;
+}
+
+// La Farmacia
+#chisiamo {
+    @media screen and (min-width: 769px) {
+        padding: 0;
+        .column-content {
+            padding: $gap-size * 2;
+        }
+    }
+}
+#prodotti {
+    .column-content {
+        padding-top: 4rem;
+    }
+    img {
+        box-shadow: 1.5rem 1.5rem 0 0 rgba($secondary, .3);
+    }
+    @media screen and (min-width: 769px) {
+        padding-top: 5rem;
+        .column-content {
+            padding-top: 0;
+        }
+        img {
+            box-shadow: 3rem 3rem 0 0 rgba($secondary, .3);
+        }
+    }
+}
+#brands {
+    .swiper-button-prev, .swiper-button-next {
+        display: none;
+    }
+    @media screen and (min-width: 769px) {
+        .swiper-pagination {
+            display: none;
+        }
+    }
+}
+#titolari .column {
+    flex: 1;
+    padding: 0 0 1.5rem 0;
+    margin: 1.25rem;
+    text-align: center;
+    box-shadow: 0px 10px 15px rgba($primary-dark, .2);
 }
