--- a/src/assets/scss/single-sections.scss
+++ b/src/assets/scss/single-sections.scss
@@ -90,8 +90,11 @@
 }
 #titolari .column {
     flex: 1;
-    padding: 0 0 1.5rem 0;
-    margin: 1.25rem;
+    padding: 0 0 1.5rem 0!important;
     text-align: center;
     box-shadow: 0px 10px 15px rgba($primary-dark, .2);
+    margin: 1.25rem 0;
+    @media screen and (min-width: 769px) {
+        margin: 1.25rem;
+    }
 }
