--- a/src/assets/scss/single-sections.scss
+++ b/src/assets/scss/single-sections.scss
@@ -98,4 +98,11 @@
     @media screen and (min-width: 769px) {
         margin: 1.25rem;
     }
+    .content {
+        p:not(.block-img) {
+            padding-left: 1.5rem;
+            padding-right: 1.5rem;
+            font-size: .9rem;
+        }
+    }
 }
