--- a/src/assets/scss/sections.scss
+++ b/src/assets/scss/sections.scss
@@ -14,6 +14,10 @@ $gap-size: 1.5rem;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+
+    &.no-overlay:before {
+        display: none;
+    }
   
     &.is-dark {
         h1, h2, h3, h4, h5, h6,  p, strong {
